# WISKR

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
cmake/: wiskrConfig.cmake.in
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/cmake/: wiskrCoreConfig.cmake.in
libs/core/include/wiskr/: skitr_server.h  test_server.h
libs/core/include/wiskr/commands/: click_on_item.h  command.h  custom_command.h  drag_begin.h  drag_end.h  drop_from_ext.h  enter_key.h  exists_and_visible.h  get_bounding_box.h  get_property.h  get_test_status.h  input_text.h  invoke_method.h  quit.h  screenshot.h  screenshot_base64.h  set_property.h  wait.h  wait_for_item.h
libs/core/include/wiskr/core/: widget_registry.h
libs/core/include/wiskr/data/: geometry.h  item_path.h  item_path_component.h  item_position.h  pasteboard_content.h
libs/core/include/wiskr/dispatch/: dispatcher.h  environment.h  state.h
libs/core/include/wiskr/events/: identifiers.h
libs/core/include/wiskr/scene/: events.h  item.h  scene.h
libs/core/include/wiskr/utils/: path_parser.h  skitr_function.h
libs/core/src/: skitr_server.cpp  test_server.cpp
libs/core/src/commands/: click_on_item.cpp  command.cpp  custom_command.cpp  drag_begin.cpp  drag_end.cpp  drop_from_ext.cpp  enter_key.cpp  exists_and_visible.cpp  get_bounding_box.cpp  get_property.cpp  get_test_status.cpp  input_text.cpp  invoke_method.cpp  quit.cpp  screenshot.cpp  screenshot_base64.cpp  set_property.cpp  wait.cpp  wait_for_item.cpp
libs/core/src/core/: widget_registry.cpp
libs/core/src/data/: geometry.cpp  item_path.cpp  item_path_component.cpp  item_postion.cpp  pasteboard_content.cpp
libs/core/src/dispatch/: dispatcher.cpp  environment.cpp  state.cpp
libs/core/src/utils/: path_parser.cpp
libs/core/tests/: CMakeLists.txt
libs/core/tests/commands/: click_on_item_tests.cpp  enter_key_tests.cpp  exists_and_visible_tests.cpp  invoke_method_tests.cpp  screenshot_base64_tests.cpp
libs/core/tests/data/: item_path_component_tests.cpp  item_path_tests.cpp
libs/core/tests/dispatch/: state_tests.cpp
libs/core/tests/mocks/: mock_events.h  mock_item.h  mock_scene.h
libs/scenes/QtQuick/: CMakeLists.txt
libs/scenes/QtQuick/cmake/: WISKRQtQuickConfig.cmake.in
libs/scenes/QtQuick/include/wiskr/: QtQmlBot.h  find_qt_item.h  qt_events.h  qt_item.h  qt_item_tools.h  qt_qml_bot.h  qt_scene.h
libs/scenes/QtQuick/include/wiskr/utils/: debug_dump.h  qt_event_recorder.h
libs/scenes/QtQuick/src/: QtQmlBot.cpp  find_qt_item.cpp  qt_events.cpp  qt_item.cpp  qt_item_tools.cpp  qt_qml_bot.cpp  qt_scene.cpp
libs/scenes/QtQuick/src/utils/: debug_dump.cpp  qt_event_recorder.cpp
libs/scenes/QtQuick/tests/: CMakeLists.txt  find_qt_item_tests.cpp  qml_test_fixture.h  qt_item_tests.cpp  qt_item_tools_tests.cpp  test_item.cpp  test_item.h  unit_tests_main.cpp
tests/core/: CMakeLists.txt
tests/core/commands/: custom_command_tests.cpp  drag_begin_tests.cpp  drag_end_tests.cpp  drop_from_ext_tests.cpp  get_bounding_box_tests.cpp  get_property_tests.cpp  input_text_tests.cpp  set_property_tests.cpp  wait_for_item_tests.cpp  wait_tests.cpp
tests/core/dispatch/: dispatcher_tests.cpp
tests/core/mocks/: mock_events.cpp  mock_item.cpp  mock_scene.cpp
tests/core/utils/: path_parser_tests.cpp
tests/scenes/QtQuick/: CMakeLists.txt
